--- a/index.html
+++ b/index.html
@@ -9,13 +9,25 @@
 </head>
 <body>
 
-<h1>Beetles</h1>
-<nav>
-<p>Ant Nest</p>
-<p>Stag</p>
-<p>Dung</p>
-<p>Tortoise</p>
-<nav>
+<header>
+  <h1>Beetles</h1>
+  <nav>
+    <ul>
+      <li>
+        <p>Ant Nest</p>
+      </li>
+      <li>
+        <p>Stag</p>
+      </li>
+      <li>
+        <p>Dung</p>
+      </li>
+      <li>
+        <p>Tortoise</p>
+      </li>
+    </ul>
+  </nav>
+</header>
 
 </body>
 </html>
