hover color and link
made each list item a link and changed the hover colour to darker brown

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
   <nav>
     <ul>
       <li>
-        <p>Ant Nest</p>
+        <a href="">Ant Nest</a>
       </li>
       <li>
-        <p>Stag</p>
+        <a href="">Stag</a>
       </li>
       <li>
-        <p>Dung</p>
+        <a href="">Dung</a>
       </li>
       <li>
-        <p>Tortoise</p>
+        <a href="">Tortoise</a>
       </li>
     </ul>
   </nav>
